# aizo-sort

./: CMakeLists.txt  main.cpp  readme.txt
io/: BasicIO.cpp  BasicIO.h  ConfigIO.cpp  ConfigIO.h  InvalidFileException.h  Printable.h  Serializable.h  SorTableIO.cpp  SorTableIO.h
model/: DataType.h  SingleResult.cpp  SingleResult.h  SorTable.cpp  SorTable.h  Table.h  TableGenerator.cpp  TableGenerator.h
model/config/: DataTypeConfig.h  DatasetConfig.h  DisplayDataConfig.h  GlobalConfig.h  PreSortMode.h  Printable.h  RunnerConfig.h  SorterConfig.h
model/generator/: BaseGenerator.cpp  BaseGenerator.h  TableGenerator.cpp  TableGenerator.h
model/runner/: BaseRunner.h  BatchResult.h  FileRunner.cpp  FileRunner.h  RunResult.h  Runner.cpp  Runner.h  SingleResult.h  SorterArray.h  Summary.h
model/sorters/: BaseSorter.h  HeapSorter.h  InsertionSorter.h  QuickSorter.cpp  QuickSorter.h  ShellSorter.h  SorterFactory.h
test/: HeapSorterInvestigation  MainTest.cpp
utils/: Logger.h  NumberUtils.cpp  NumberUtils.h
